<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_talent"
            android:icon="@drawable/talent"
            android:title="@string/menu_share_talent" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactus"
            android:title="@string/menu_contact_us" />

        <item android:id="@+id/nav_support"
            android:title="@string/share_app"
            android:icon="@drawable/ic_baseline_star_rate_24"

            />
        <item android:id="@+id/nav_who_are"

            android:title="من نحن"
            android:icon="@drawable/ic_files___document"

            />
    </group>
</menu>