<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        >


        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/rosal_logo"
            android:scaleType="fitCenter"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:textSize="@dimen/_20ssp"
            android:text="تسحيل الدخول"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:hint="البريد الالكتروني"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textAlignment="viewEnd"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13sdp"

            />




        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="كلمة المرور"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13sdp"
            android:textAlignment="viewEnd"

            />


        <TextView
            android:id="@+id/textForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="end"
            android:textColor="#878787"
            android:gravity="start"

            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"

                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"

                app:cornerRadius="@dimen/_8sdp"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"

                />
        </FrameLayout>


        <TextView
            android:id="@+id/signAsGuset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="الدخول كضيف"
            android:gravity="center"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/_20ssp"
            android:padding="@dimen/_8sdp"

            android:layout_marginTop="@dimen/_16sdp"

            />

<!--        <TextView-->
<!--            android:id="@+id/textCreateNewAccount"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_8sdp"-->
<!--            android:text="إنشاء حساب جديد"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="@dimen/_13sdp"-->
<!--            android:textColor="#50575C"-->

<!--            />-->
        <LinearLayout
            android:id="@+id/textCreateNewAccount"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp"

            >
            <TextView
                android:id="@+id/textCreateNewAccount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="انشئ حسابا "
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/mainColor"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"
                android:textColor="#9A9A9A"

                />


        </LinearLayout>

    </LinearLayout>

</ScrollView>